--- a/src/views/Application/private-files.latte
+++ b/src/views/Application/private-files.latte
@@ -200,11 +200,17 @@
                         <div class="form-inputs">
                             <div class="choose-variant-row">
                                 <input class="radio-input" type="radio" name="share-with" value="class" id="share-with-class" checked />
-                                <label for="share-with-class" class="radio-label"><i class="from-class-i radio-label-icon"></i>se třídou</label>
+                                <label for="share-with-class" class="radio-label">
+                                    <i class="radio-simulation"></i>
+                                    <i class="from-class-i radio-label-icon"></i>se třídou
+                                </label>
                             </div>
                             <div class="choose-variant-row">
                                 <input class="radio-input" type="radio" name="share-with" value="user" id="share-with-schoolmate" />
-                                <label for="share-with-schoolmate" class="radio-label"><i class="from-schoolmate-i radio-label-icon"></i>se spolužákem</label>
+                                <label for="share-with-schoolmate" class="radio-label">
+                                    <i class="radio-simulation"></i>
+                                    <i class="from-schoolmate-i radio-label-icon"></i>se spolužákem
+                                </label>
                             </div>
 
                             <div class="additional-data">
