--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -4762,21 +4762,30 @@ body.active-alert {
 }
 .alert-form .form-inputs .choose-variant-row .radio-label {
   cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
-.alert-form .form-inputs .choose-variant-row .radio-label:before {
-  content: "";
+.alert-form .form-inputs .choose-variant-row .radio-label .radio-simulation {
   display: inline-block;
-  width: 0.5em;
-  height: 0.5em;
+  width: 0.8em;
+  height: 0.8em;
   margin-right: 0.6em;
   border: 2px solid #EEE9E5;
   border-radius: 100%;
+  padding: 0.1em;
 }
 .alert-form .form-inputs .choose-variant-row .radio-label .radio-label-icon {
   margin-right: 0.5em;
 }
-.alert-form .form-inputs .choose-variant-row .radio-input:checked + .radio-label:before {
-  background: #EEE9E5;
+.alert-form .form-inputs .choose-variant-row .radio-input:checked + .radio-label .radio-simulation:before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: #A7A5A6;
+  border-radius: 100%;
 }
 .alert-form .form-inputs .additional-data {
   margin-left: 1.3em;
