--- a/src/views/Application/private-reminders-and-notes.latte
+++ b/src/views/Application/private-reminders-and-notes.latte
@@ -173,7 +173,7 @@
                                 </label>
                             </div>
                             <div class="choose-variant-row">
-                                <input class="radio-input" type="radio" name="share-with" value="user" id="share-with-schoolmate" />
+                                <input class="radio-input" type="radio" name="share-with" value="schoolmate" id="share-with-schoolmate" />
                                 <label for="share-with-schoolmate" class="radio-label">
                                     <i class="radio-simulation"></i>
                                     <i class="from-schoolmate-i radio-label-icon"></i>se spolužákem
