Administrace - priprava sablony

--- a/src-front/less/components/_icons.less
+++ b/src-front/less/components/_icons.less
@@ -14,6 +14,10 @@
 .arrow-right-i {
   .icon(@fa-var-arrow-right, "s");
 }
+
+.arrow-left-i {
+  .icon(@fa-var-arrow-left, "s");
+}
 // END hlavicka
 
 
@@ -272,3 +276,32 @@
   .icon(@fa-var-times, "r");
 }
 // END profily
+
+
+// START administrace
+.user-i {
+  .icon(@fa-var-graduation-cap, "d");
+  color: @red;
+}
+
+.admin-i {
+  .icon(@fa-var-crown, "d");
+  color: @dark-yellow;
+}
+
+.change-to-admin-i {
+  .icon(@fa-var-crown, "r");
+}
+
+.change-to-user-i {
+  .icon(@fa-var-graduation-cap, "r");
+}
+
+.clear-files-i {
+  .icon(@fa-var-file-times, "s");
+}
+
+.delete-user-i {
+  .icon(@fa-var-user-times, "s");
+}
+// END administrace
