--- a/src-front/less/core.less
+++ b/src-front/less/core.less
@@ -16,6 +16,7 @@
 @import "utils/vars/_size";
 @import "utils/vars/_z-index";
 @import "utils/vars/_media";
+@import "utils/vars/_admin-color";
 
 @import "utils/functions/_functions";
 
@@ -86,6 +87,8 @@
 @import "pages/_introduction";
 @import "pages/_my-reminders-and-notes";
 @import "pages/_profile";
+@import "pages/_admin-layer";
+@import "pages/_administration";
 
 
 /*
