--- a/src-front/less/layout/_content.less
+++ b/src-front/less/layout/_content.less
@@ -85,6 +85,14 @@
   }
 
   @media screen and (min-width: @desktop) {
+    width: 60%;
+  }
+
+  @media screen and (min-width: @middle-desktop) {
+    width: 50%;
+  }
+
+  @media screen and (min-width: @big-desktop) {
     width: 40%;
   }
 
