--- a/src-front/templates/aplikacni-vrstva/profil-uzivatele-a-tridy.html
+++ b/src-front/templates/aplikacni-vrstva/profil-uzivatele-a-tridy.html
@@ -54,7 +54,7 @@
 </header>
 
 
-<main class="page-content summary">
+<main class="page-content">
     <div class="page multi-page">
         <header class="multi-page-header">
             <!-- TODO: třídu "active" nastavit aktivní kartě -->
