Oprava paticky a pridani odkazu do administrace

--- a/src-front/less/components/_links.less
+++ b/src-front/less/components/_links.less
@@ -7,6 +7,14 @@
     cursor: pointer;
     color: darken(@link-c, 20%);
   }
+
+  i:first-child {
+    margin-right: .3em;
+  }
+
+  i:last-child {
+    margin-left: .3em;
+  }
 }
 
 .action-link {
