--- a/src-front/templates/aplikacni-vrstva/rozlozeni.html
+++ b/src-front/templates/aplikacni-vrstva/rozlozeni.html
@@ -56,17 +56,25 @@
 
 
 <footer class="page-footer">
-    <p class="footer-info">
-        Jedná se o maturitní projekt (ročník 2019/2020).
-        Autorem je Michal ŠMAHEL, grafické podklady připravila Adéla VYHNÁLKOVÁ.
-        Zdrojové kódy je možné nalézl na
-        <a class="basic-link" href="https://github.com/ceskyDJ/moje-studium">Githubu</a>.
-    </p>
+    <div class="right-column">
+        <p class="footer-contact">
+            <strong class="contact-mini-heading">Kontakt</strong>
+            <a class="contact-email" href="mailto:moje-studium@ceskydj.cz">moje-studium@ceskydj.cz</a>
+        </p>
 
-    <p class="footer-contact">
-        <strong class="contact-mini-heading">Kontakt</strong>
-        <a class="contact-email" href="mailto:moje-studium@ceskydj.cz">moje-studium@ceskydj.cz</a>
-    </p>
+        <p class="footer-admin-link">
+            <a class="basic-link" href="#"><i class="arrow-right-i"></i>Přejít do administrace<i class="arrow-right-i"></i></a>
+        </p>
+    </div>
+
+    <div class="left-column">
+        <p class="footer-info">
+            Jedná se o maturitní projekt (ročník 2019/2020).
+            Autorem je Michal ŠMAHEL, grafické podklady připravila Adéla VYHNÁLKOVÁ.
+            Zdrojové kódy je možné nalézl na
+            <a class="basic-link" href="https://github.com/ceskyDJ/moje-studium">Githubu</a>.
+        </p>
+    </div>
 </footer>
 </body>
 </html>
