--- a/src/views/Admin/#layout.latte
+++ b/src/views/Admin/#layout.latte
@@ -1,8 +1,67 @@
-{layout $layoutView}
+<!DOCTYPE html>
 
-{block content}
 
-{/block}
+<html lang="cs">
+<head>
+    <base href="{$server->getBaseHref()}" />
+
+    <meta charset="UTF-8" />
+
+    <title>{if strstr($title, "Moje Studium")}{$title}{else}{$title} | Moje Studium{/if}</title>
+
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1" />
+
+    <meta name="description" content="{spaceless}{$description}{/spaceless}" />
+    <meta name="keywords" content="{spaceless}{$keywords}{/spaceless}" />
+
+    <meta name="author" content="Michal ŠMAHEL (ceskyDJ)" />
+
+    <link href="/css/styles.css" rel="stylesheet" type="text/css" />
+</head>
+
+
+<body class="admin">
+<header class="page-header">
+    <section class="page-header-section">
+        <h1 class="main-heading">Moje Studium</h1>
+
+        <div class="other-content">
+            <div class="actions">
+                <a class="action-link logout" href="/sign/out">Odhlásit se</a>
+            </div>
+
+            <div class="presentation-user-actions">
+                <a class="link-button" href="/application"><i class="arrow-left-i"></i> Zpět do aplikace
+                    <i class="arrow-left-i"></i></a>
+            </div>
+        </div>
+    </section>
+</header>
+
+
+<main class="page-content {block contentClass}{/block}">
+    {block content}{/block}
+</main>
+
+<footer class="page-footer">
+    <div class="right-column">
+        <p class="footer-contact">
+            <strong class="contact-mini-heading">Kontakt</strong>
+            <a class="contact-email" href="mailto:moje-studium@ceskydj.cz">moje-studium@ceskydj.cz</a>
+        </p>
+    </div>
+
+    <div class="left-column">
+        <p class="footer-info">
+            {spaceless}
+                Jedná se o maturitní projekt (ročník 2019/2020).
+                Autorem je Michal ŠMAHEL, grafické podklady připravila Adéla VYHNÁLKOVÁ.
+                Zdrojové kódy je možné nalézl na
+                <a class="basic-link" href="https://github.com/ceskyDJ/moje-studium">Githubu</a>.
+            {/spaceless}
+        </p>
+    </div>
+</footer>
 
 {* Libraries *}
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
