Oprava: Slozka, ktera je pridana JS, jde sdilet

--- a/src/views/Application/private-files.latte
+++ b/src/views/Application/private-files.latte
@@ -54,10 +54,10 @@
                         </div>
                     </td>
                     <td class="action">
-                        <div class="action-container shared _shared {* {shared ? "active"} *}">
+                        <div class="action-container shared _shared _share-container {* {shared ? "active"} *}">
                             <i class="_shared-with {* from-{"class" || "schoolmate"}-i *}"></i>
                         </div>
-                        <div class="action-container not-shared">
+                        <div class="action-container not-shared _share-container">
                             <a href="javascript:void(0);" class="action-link text _share-file _action" data-id="{* {id} *}">Sdílet</a>
                             <a href="javascript:void(0);" class="link-with-icon icon _share-file _action" data-id="{* {id} *}"><i class="share-i"></i></a>
                         </div>
