--- a/src/views/Application/private-reminders-and-notes.latte
+++ b/src/views/Application/private-reminders-and-notes.latte
@@ -117,7 +117,7 @@
                 <p class="_content">{* {content} *}</p>
                 <i class="action edit-i _edit-note _action-id" data-id="{* {id} *}"></i>
                 <i class="action delete-i _delete-note _action-id" data-id="{* {id} *}"></i>
-                <div class="action">
+                <div n:ifcontent="$user->getClass() !== null" class="action">
                     <i class="_shared shared {* {shared ? "active"} *}{* {from-class-i || from-schoolmate-i} *}"></i>
                     <i class="share-i not-shared _share _action-id" data-id="{* {id} *}" data-content="note"></i>
                 </div>
@@ -129,7 +129,7 @@
                 <p class="_content">{$note->getContent()}</p>
                 <i class="action edit-i _edit-note" data-id="{$note->getId()}"></i>
                 <i class="action delete-i _delete-note" data-id="{$note->getId()}"></i>
-                <div class="action">
+                <div n:ifcontent="$user->getClass() !== null" class="action">
                     <i n:class="_shared, shared, $note->isShared() ? active, $note->isShared() ? 'from-'.$note->whoIsSharedWith().'-i'"></i>
                     <i class="share-i not-shared _share" data-id="{$note->getId()}" data-content="note"></i>
                 </div>
@@ -161,7 +161,7 @@
                 </section>
             </div>
 
-            <div class="alert-box _alert hide" data-id="share">
+            <div n:if="$user->getClass() !== null" class="alert-box _alert hide" data-id="share">
                 <header class="alert-header">
                     <h3 class="alert-heading _share-form-heading" data-content="reminder">Sdílení upozornění</h3>
                     <h3 class="alert-heading _share-form-heading hide" data-content="note">Sdílení poznámky</h3>
